                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.5.0


  *) [TS-2127] Move hostdb.config to var/trafficserver, together with with the
   host.db itself.

  *) [TS-2089] Introduce configurable collation preproc threads.

  *) [TS-2132, TS-2131] ${libexecdir} and $(localstatedir} chowned
   needlessly chowned to to ATS' user.
   Author: Tomasz Kuzemko <tomasz@kuzemko.net>

  *) [TS-2126] Avoid unnecessary memory copy in LogHost::write()

  *) [TS-2130] pthread_setname_np() detection fails on various platforms.

  *)[ TS-2096] Improve SSL certificate loading error messages.

  *) [TS-2129] Check for existence of ExtUtils::MakeMaker.

  *) [TS-2128] Don't link libGeoIP.so.1 into binaries.

  *) [TS-2122] Enlarge the 64KB limitation of log buffer size.

  *) [TS-2061] LogFile::write_ascii_logbuffer3() can silently drop log
   entries.

  *) [TS-2123] Remove useless max_entries_per_buffer option.

  *) [TS-2112] Make libloader build by default.

  *) [TS-2111] configure check in boost falsely requires 1.50. Reducing it to
   v1.33, which is what RHEL5 ships with.

  *) [TS-1823] remap.config line continuation support.
    Author: Jim Riggs <jim@riggs.me>

  *) [TS-1597] Document remap.config filters. Author: Jim Riggs <jim@riggs.me>.

  *) [TS-2111] configure check in boost falsely requires 1.50. Reducing it to
   v1.33, which is what RHEL5 ships with.


Changes with Apache Traffic Server 3.3.5


  *) [TS-2051] Fix SSL crash due to excess READ_COMPLETE events.

  *) [TS-2099] Using wrong member when setting active timeout.

  *) [TS-2102] SPDY plugin tries to setup protocol handler too early.

  *) [TS-1953] remove version checks from plugins that don't use it and
   add an example showing off the version API and partial compilation.

  *) [TS-2100] Initialize the SSL/NPN registration mutex.

  * [TS-1987, TS-2097]: Remove duplicate and unused string functions
